# conf2var

./: .gitmodules  CMakeLists.txt  conf2var.c  conf2var.h
